<resources>
    <string name="app_name">My Post</string>
    <string name="main">Home</string>
    <string name="name">Name</string>


    <string name="favourite">Favourite</string>
    <string name="more">More</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="enjoy">Enjoy \u0020 </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="myorder">My Order</string>
    <string name="request">Request</string>
    <string name="profile"> Profile </string>
    <string name="interactiveAds">Interactive Ads </string>
    <string name="topProducts">Top Products</string>
    <string name="bestFamous">Best Famous</string>
    <string name="specialFamous">Special Famous</string>
    <string name="certifiedFamous">Certified Famous</string>
    <string name="specialCustomer">Special Customer</string>
    <string name="textView" translatable="false">Text View</string>

    <string name="seeAll">See All</string>
    <string name="ads">Ads</string>
    <string name="rate">Rating</string>


    <string name="notification">Notification</string>
    <string name="select_number">select number of subscribers</string>
    <string name="category_type">Choose Category Type</string>
    <string name="ads_type">Add the type Of add you want</string>
    <string name="suggestedAds">Suggested Ads</string>
    <string name="next">Next</string>
    <string name="send">send request</string>

    <string name="title">Title</string>
    <string name="enterTitle">Enter Title</string>
    <string name="enterName">Enter your name</string>
    <string name="email"> Email</string>
    <string name="EnterEmail">Enter your Email</string>
    <string name="phone"> Phone number</string>
    <string name="enterPhone"> Enter Phone number</string>
    <string name="ID"> ID</string>
    <string name="enteID"> Enter your ID </string>


    <string name="sub_title"> Subtitle</string>
    <string name="enter_sub_title">Enter Subtitle</string>
    <string name="description">Description</string>
    <string name="write_description">Write a Description here</string>
    <string name="please_wait">Please Wait until the famous accepts your request</string>

    <string name="your_budget">your budget starts from</string>
    <string name="to">To</string>
    <string name="backToHome">Back To Home</string>

    <string name="numOfDay">Number of days</string>
    <string name="requestMade">Request Made\u0020 </string>
    <string name="_0">0</string>
    <string name="search_famous">Search famous social media</string>
    <string name="ads_with_famous">Advertising with famous social media</string>
    <string name="viewProfile">View Profile</string>
    <string name="sign_in">Sign In \u0020 </string>
    <string name="sign_up">Sign up \u0020 </string>
    <string name="email_or_phone">Email or phone number</string>
    <string name="password">password</string>
    <string name="forget_passowrd">Forget password</string>
    <string name="create_acc"> create account</string>
    <string name="acc">  Account</string>
    <string name="new_here"> New here ?\u0020 </string>
    <string name="personal_info">Personal Info</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign out</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="addBio">Add a bio to your profile</string>
    <string name="accepted">Accepted orders</string>
    <string name="date">Date</string>
    <string name="famous">Famous</string>
    <string name="sendPublicRequest">Send public request</string>
    <string name="sendPrivateRequest">Send private request</string>
    <string name="welcomeFollower">welcome my followers 😍</string>

    <string name="youCanfollow">you can follow me or order my service from My Post App</string>
    <string name="youCanfind">you can find me by my code</string>
    <string name="waiting">i am waiting you here</string>
    <string name="share">Share</string>
    <string name="skip">Skip</string>
    <string name="iBan" >iBan</string>
    <string name="loginAsFamous" >Login As a Famous</string>
    <string name="loginAsMerchant" >Login As a Merchant</string>
    <string name="postLinks">Post Links</string>
    <string name="enterLinks">Please enter your post links at your account</string>
    <string name="enterLink"> Enter  link</string>
    <string name="submit">Submit</string>
    <string name="soicalMedia">Social Media</string>
    <string name="facebook" >Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="insta">Instgram</string>
    <string name="snap">SnapChat</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>