<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>
        <variable
            name="listener"
            type="com.tarweej.mypost.helper.ClickHandler" />
        <variable
            name="context"
            type="com.tarweej.mypost.presentation.famous.auth.FamousAuthenticationActivity" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            style="@style/HomeTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTitle"
            style="@style/menuTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enterName"
            style="@style/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/gray"
            android:background="@drawable/light_gray_back_g"
            android:hint="@string/enterName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/EmailTitle"
            style="@style/menuTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enterEmail"
            style="@style/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/gray"

            android:background="@drawable/light_gray_back_g"
            android:hint="@string/EnterEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailTitle" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phoneTitle"
            style="@style/menuTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterEmail" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iBan"
            style="@style/menuTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/iBan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPhone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enterPhone"
            style="@style/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/gray"

            android:background="@drawable/light_gray_back_g"
            android:hint="@string/enterPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enterPhone2"
            style="@style/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/gray"

            android:background="@drawable/light_gray_back_g"
            android:hint="@string/iBan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iBan" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cityTitle"
            style="@style/menuTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPhone2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityTitle_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/light_gray_back_g"
            android:hint="@string/city"
            android:orientation="horizontal"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/purple_700"
            app:boxStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTitle">


            <AutoCompleteTextView
                android:id="@+id/choose_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableTint="@color/purple_700"
                android:inputType="none"
                android:outlineProvider="bounds"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countryTitle"
            style="@style/menuTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTitle_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryTitle_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_gray_back_g"
            android:hint="@string/country"
            android:orientation="horizontal"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/purple_700"
            app:boxStrokeWidth="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryTitle">


            <AutoCompleteTextView
                android:id="@+id/choose_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableTint="@color/purple_700"
                android:inputType="none"
                android:outlineProvider="bounds"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addBioTitle"
            style="@style/menuTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/addBio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryTitle_text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Bio"
            style="@style/signUpText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/light_gray_back_g"
            android:hint="@string/addBio"
            android:textColorHint="@color/gray"

            android:minHeight="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addBioTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/search_button"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="@{() -> listener.switchToFamousSocialFragment(context)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bio"
            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>